# l4q

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yaml
l4q/: __init__.py  extensions.py
l4q/routes/: index.py  search.py
l4q/static/css/: campaign_frame.css  search.css  style.css
l4q/static/scripts/: player_list.js  search.js
l4q/templates/: base.html  player_list.html  search.html  server_item.html
l4q/utils/: get_l4d2_version.py  l4d2_names.py  map_thumbnail.py  parse_hostname.py  player_list.py  server_data_utils.py
